Updating AvatarDownloader to use HttpURLConnection insteal of legacy Apache HTTP Client